--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -28,7 +28,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
-
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6' //p6spy 추가
 	//jwt
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 }
