디테일 페이지 + 댓글 + 좋아요 버그 수정

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -18,6 +18,8 @@
 .env.test.local
 .env.production.local
 application.properties
+application-photo.properties
+application-oauth.properties
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
